--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 .page {
-  min-width: 1100;
-  max-width: 1600;
+  min-width: 1100px;
+  max-width: 1600px;
   margin: auto;
   font-family: "Inter", Arial, sans-serif;
   font-family: "Noto Serif", "Times New Roman", serif;
