--- a/pages/index.css
+++ b/pages/index.css
@@ -86,21 +86,16 @@
   margin-top: auto;
   display: flex;
   justify-content: space-between;
-  flex-direction: column;
 }
 
 .header__paragraph {
   font-family: "Inter", Arial, sans-serif;
-
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #6f6f6f;
   margin: 0;
-}
-
-.header__paragraph-address {
-  align-self: flex-end;
+  margin-top: auto;
 }
 
 .recipes {
@@ -115,7 +110,7 @@
 }
 
 .recipes__title {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
 
   font-weight: 500;
   font-size: 44px;
@@ -124,8 +119,7 @@
 }
 
 .recipes__subtitle {
-  font-family: "Noto Serif";
-
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
   max-width: 438px;
@@ -133,22 +127,40 @@
 }
 
 .recipes__video {
-  max-width: 480px;
-  max-height: 273px;
   padding-top: 80px;
   margin: 0 auto;
   list-style-type: none;
   justify-content: center;
   display: flex;
   gap: 40px;
+  border: none;
+}
+
+.recipes__iframe {
+  margin: 0;
+  width: 100%;
+  position: relative;
+  height: 273px;
+  width: 480px;
+}
+.recipes__iframe-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 .recipes__video-caption {
-  font-family: "Inter";
-
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding: 24px 0 0;
 }
