--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
   background-size: cover;
   box-sizing: border-box;
   background-color: #fff;
+  position: relative;
 }
 
 .nav {
@@ -79,7 +80,7 @@
   position: absolute;
   max-width: 646px;
   top: 124px;
-  right: 85px;
+  right: 5px;
 }
 
 .header__footer {
@@ -126,7 +127,7 @@
   padding-top: 24px;
 }
 
-.recipes__video {
+.recipes__videos {
   padding-top: 80px;
   margin: 0 auto;
   list-style-type: none;
@@ -137,20 +138,8 @@
 }
 
 .recipes__iframe {
-  margin: 0;
-  width: 100%;
-  position: relative;
-  height: 273px;
+  height: 270px;
   width: 480px;
-}
-.recipes__iframe-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
   border: none;
 }
 
