--- a/pages/index.css
+++ b/pages/index.css
@@ -153,3 +153,87 @@
   margin: 0;
   padding: 24px 0 0;
 }
+
+.reservation {
+  padding: 120px 0 100px;
+  background-color: #d9e7ff;
+  background-image: url(/images/background_reservation.svg);
+}
+
+.reservation__title {
+  margin: 0 0 80px;
+  text-align: center;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  color: #000;
+}
+
+.reservation__form {
+  margin: 0 auto;
+}
+.form {
+  max-width: 385px;
+}
+.form__input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 15px 20px;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  border: 1px solid #838383;
+  margin: 8px 0 32px;
+}
+
+.form__fieldset {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.form__label {
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  padding-bottom: 8px;
+  color: #000;
+}
+
+.form__button {
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  width: 100%;
+  background: #1878dc;
+  color: #fff;
+  padding: 20px 0;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 32px;
+}
+
+.form__button:hover {
+  background: #3f96f3;
+}
+
+.form__checkbox {
+  border-radius: 2px;
+  width: 20px;
+  height: 20px;
+}
+
+.form__label_type_checkbox {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
